--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
                 <input type="password" name="password" placeholder="密码" />
               </div>
               <div class="inputBox">
-                <input type="submit" value="登录" />
+                <input
+                  type="submit"
+                  value="登录"
+                  button.onclick="window.location.href='admin_dashboard.html'"
+                />
               </div>
             </form>
           </div>
