--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>登录</title>
-    <link rel="stylesheet" href="static/css/style_login.css" />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/style_login.css') }}"
+    />
     <style>
       .hidden {
         display: none;
@@ -41,11 +44,7 @@
                 <input type="password" name="password" placeholder="密码" />
               </div>
               <div class="inputBox">
-                <input
-                  type="submit"
-                  value="登录"
-                  button.onclick="window.location.href='admin_dashboard.html'"
-                />
+                <input type="submit" value="登录" />
               </div>
             </form>
           </div>
