--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>登录</title>
-    <link
-      rel="stylesheet"
-      href="{{ url_for('static', filename='css/style_login.css') }}"
-    />
+    <link rel="stylesheet" href="static/css/style_login.css" />
     <style>
       .hidden {
         display: none;
